# kadipy

./: .gitignore  CNAME  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  weather.ipynb
.github/workflows/: docs.yml  publish.yml  tests.yml
1.0.0/: 404.html  index.html  objects.inv  sitemap.xml
1.0.0/kidas/: 00_index.ipynb  01_csv_source.ipynb  05_api_source.ipynb  09_data_cache.ipynb  index.html
1.0.0/kidas/cleaner/: index.html
1.0.0/kidas/normalizer/: index.html
1.0.0/kidas/pipeline/: index.html
1.0.0/kidas/validator/: index.html
1.0.0/market/: index.html
1.0.0/market/data_ingestion/: index.html
1.0.0/market/decision_support/: index.html
1.0.0/market/forecasting/: index.html
1.0.0/market/logistics/: index.html
1.0.0/market/pricing/: index.html
1.0.0/search/: search_index.json
1.0.0/weather/: 05_phenology.ipynb  index.html
1.0.0/weather/hydrology/: index.html
1.0.0/weather/phenology/: index.html
1.0.0/weather/risk/: index.html
1.0.0/weather/session/: index.html
config/: fuel_prices.json
docs/: RAPPORT_ANALYSE_CODE.md  index.md
docs/kidas/: 02_excel_source.ipynb  03_json_source.ipynb  04_netcdf_source.ipynb  06_data_cleaner.ipynb  07_data_validator.ipynb  08_data_normalizer.ipynb  10_data_pipeline.ipynb  cleaner.md  index.md  normalizer.md  pipeline.md  validator.md
docs/market/: 01_pricing.ipynb  02_forecasting.ipynb  03_logistics.ipynb  04_decision_support.ipynb  data_ingestion.md  decision_support.md  forecasting.md  index.md  logistics.md  pricing.md
docs/weather/: 01_data.ipynb  02_hydrology.ipynb  03_location.ipynb  06_risk.ipynb  hydrology.md  index.md  phenology.md  risk.md  session.ipynb  session.md
kadi/: __init__.py  cache.py  config.py  exceptions.py  weather.py
kadi/_sources/: chirps.py  open_meteo.py  soilgrids.py
kadi/_utils/: coordinates.py  network.py
kadi/kidas/: README.md  __init__.py  cache.py  cleaner.py  normalizer.py  pipeline.py  validator.py
kadi/kidas/sources/: __init__.py  api_source.py  base.py  csv_source.py  excel_source.py  json_source.py  netcdf_source.py
kadi/market/: README.md  __init__.py  _cache.py  _normalization.py  backtesting.py  data_ingestion.py  decision_support.py  forecasting.py  logistics.py  pricing.py
kadi/weather/: README.md  __init__.py  data.py  hydrology.py  location.py  phenology.py  risk.py  session.py
scripts/: setup_offline_data.py  test_wfp_api.py
tests/integrations/: test_weather_integration.py
tests/test_kidas/: conftest.py  test_csv_source.py  test_processing.py  test_sources.py
tests/test_market/: test_backtesting.py  test_market_components.py  test_market_integration.py
tests/weather/: test_coordinates.py  test_data.py  test_hydrology.py  test_location.py  test_network.py  test_open_meteo.py  test_performance.py  test_phenology.py  test_risk.py  test_session.py  test_weather.py
